--- a/YourasMusic/src/yourasmusic/FXMLInicioPane.fxml
+++ b/YourasMusic/src/yourasmusic/FXMLInicioPane.fxml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Ellipse?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.TilePane?>
+<?import javafx.scene.shape.Rectangle?>
 
-<AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="990.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="yourasmusic.FXMLMusicController">
+<AnchorPane id="AnchorPane" fx:id="anchor" prefHeight="800.0" prefWidth="990.0" style="-fx-background-color: #607D8B;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="yourasmusic.FXMLInicioPaneController">
    <children>
-      <Label layoutX="483.0" layoutY="373.0" text="Inicial">
-         <font>
-            <Font size="36.0" />
-         </font></Label>
-      <Ellipse fill="DODGERBLUE" layoutX="128.0" layoutY="114.0" radiusX="100.0" radiusY="80.0" stroke="BLACK" strokeType="INSIDE" />
-      <Ellipse fill="DODGERBLUE" layoutX="862.0" layoutY="114.0" radiusX="100.0" radiusY="80.0" stroke="BLACK" strokeType="INSIDE" />
-      <Ellipse fill="DODGERBLUE" layoutX="120.0" layoutY="699.0" radiusX="100.0" radiusY="80.0" stroke="BLACK" strokeType="INSIDE" />
-      <Ellipse fill="DODGERBLUE" layoutX="856.0" layoutY="699.0" radiusX="100.0" radiusY="80.0" stroke="BLACK" strokeType="INSIDE" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#272727" height="254.0" layoutX="47.0" layoutY="85.0" stroke="BLACK" strokeType="INSIDE" width="429.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#272727" height="254.0" layoutX="513.0" layoutY="85.0" stroke="BLACK" strokeType="INSIDE" width="429.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#272727" height="132.0" layoutX="47.0" layoutY="368.0" stroke="BLACK" strokeType="INSIDE" width="897.0" />
+      <TilePane fx:id="listaGenerosTile" layoutX="47.0" layoutY="520.0" prefHeight="267.0" prefWidth="897.0" style="-fx-background-color: TRANSPARENT;">
+         <children>
+            <Button fx:id="btnGenero" mnemonicParsing="false" prefHeight="160.0" prefWidth="213.0" style="-fx-background-color: #272727;" stylesheets="@styles.css" text="Button" />
+         </children>
+      </TilePane>
    </children>
 </AnchorPane>
