--- a/YourasMusic/src/yourasmusic/FXMLArtistas.fxml
+++ b/YourasMusic/src/yourasmusic/FXMLArtistas.fxml
@@ -1,16 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="990.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/9.0.1" fx:controller="yourasmusic.FXMLArtistasController">
+<AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="990.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="yourasmusic.FXMLArtistasController">
    <children>
-      <Label layoutX="448.0" layoutY="359.0" text="Artistas">
-         <font>
-            <Font size="36.0" />
-         </font>
-      </Label>
+      <BorderPane prefHeight="811.0" prefWidth="1002.0">
+         <center>
+            <TilePane fx:id="tileAlbuns" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+         </center>
+         <top>
+            <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Label layoutX="79.0" layoutY="29.0" prefHeight="76.0" prefWidth="138.0" text="Artistas" textFill="WHITE">
+                     <font>
+                        <Font size="31.0" />
+                     </font>
+                  </Label>
+                  <ComboBox layoutX="277.0" layoutY="62.0" prefHeight="40.0" prefWidth="347.0" style="-fx-background-color: #272727;" />
+                  <Button layoutX="731.0" layoutY="62.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="201.0" style="-fx-background-color: #272727;" text="Ver todos" textFill="WHITE" />
+                  <Label layoutX="79.0" layoutY="87.0" prefHeight="20.0" prefWidth="138.0" text="Mais ouvidos" textFill="WHITE">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+               </children>
+            </Pane>
+         </top>
+      </BorderPane>
    </children>
 </AnchorPane>
