--- a/YourasMusic/src/yourasmusic/FXMLAlbuns.fxml
+++ b/YourasMusic/src/yourasmusic/FXMLAlbuns.fxml
@@ -11,10 +11,7 @@
 
 <AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="990.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="yourasmusic.FXMLAlbunsController">
    <children>
-      <BorderPane layoutX="2.0" layoutY="1.0" prefHeight="800.0" prefWidth="990.0">
-         <center>
-            <TilePane fx:id="tileAlbuns" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
-         </center>
+      <BorderPane fx:id="mainPane" layoutX="2.0" layoutY="1.0" prefHeight="800.0" prefWidth="990.0">
          <top>
             <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                <children>
@@ -32,6 +29,9 @@
                   </Label>
                </children>
             </Pane>
-         </top></BorderPane>
+         </top>
+         <center>
+            <TilePane fx:id="tileAlbuns" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+         </center></BorderPane>
    </children>
 </AnchorPane>
