--- a/YourasMusic/src/yourasmusic/FXMLAlbuns.fxml
+++ b/YourasMusic/src/yourasmusic/FXMLAlbuns.fxml
@@ -3,13 +3,14 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="990.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="yourasmusic.FXMLAlbunsController">
+<AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="990.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="yourasmusic.FXMLAlbunsController">
    <children>
       <BorderPane fx:id="mainPane" layoutX="2.0" layoutY="1.0" prefHeight="800.0" prefWidth="990.0">
          <top>
@@ -31,7 +32,15 @@
             </Pane>
          </top>
          <center>
-            <TilePane fx:id="tileAlbuns" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+            <ScrollPane prefHeight="200.0" prefWidth="200.0" styleClass="pane" stylesheets="@styles.css" BorderPane.alignment="CENTER">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="894.0" prefWidth="992.0" styleClass="pane" stylesheets="@styles.css">
+                     <children>
+                        <TilePane fx:id="tileAlbuns" prefHeight="914.0" prefWidth="1004.0" />
+                     </children>
+                  </AnchorPane>
+              </content>
+            </ScrollPane>
          </center></BorderPane>
    </children>
 </AnchorPane>
