--- a/YourasMusic/src/yourasmusic/FXMLArtistas.fxml
+++ b/YourasMusic/src/yourasmusic/FXMLArtistas.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
@@ -11,12 +12,9 @@
 
 <AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="990.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="yourasmusic.FXMLArtistasController">
    <children>
-      <BorderPane prefHeight="811.0" prefWidth="1002.0">
-         <center>
-            <TilePane fx:id="tileArtistas" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
-         </center>
+      <BorderPane prefHeight="800.0" prefWidth="990.0">
          <top>
-            <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+            <Pane prefHeight="132.0" prefWidth="990.0" BorderPane.alignment="CENTER">
                <children>
                   <Label layoutX="79.0" layoutY="29.0" prefHeight="76.0" prefWidth="138.0" text="Artistas" textFill="WHITE">
                      <font>
@@ -33,6 +31,17 @@
                </children>
             </Pane>
          </top>
+         <center>
+            <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" prefHeight="1000.0" prefWidth="200.0" styleClass="pane" stylesheets="@styles.css" BorderPane.alignment="CENTER">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="964.0" prefWidth="990.0" styleClass="pane" stylesheets="@styles.css">
+                     <children>
+                        <TilePane fx:id="tileArtistas" prefHeight="1100.0" prefWidth="990.0" />
+                     </children>
+                  </AnchorPane>
+              </content>
+            </ScrollPane>
+         </center>
       </BorderPane>
    </children>
 </AnchorPane>
