--- a/YourasMusic/src/yourasmusic/FXMLInicioRoot.fxml
+++ b/YourasMusic/src/yourasmusic/FXMLInicioRoot.fxml
@@ -42,9 +42,14 @@
                   <Font size="18.0" />
                </font>
             </Button>
-            <Button fx:id="but_upload" layoutX="37.0" layoutY="684.0" mnemonicParsing="false" onAction="#switchCenter" prefHeight="46.0" prefWidth="177.0" styleClass="button-upload" stylesheets="@styles.css" text="Upload" textFill="#ff8c00" textOverrun="CLIP" wrapText="true">
+            <Button fx:id="but_upload" layoutX="37.0" layoutY="653.0" mnemonicParsing="false" onAction="#switchCenter" prefHeight="46.0" prefWidth="177.0" styleClass="button-upload" stylesheets="@styles.css" text="Upload" textFill="#ff8c00" textOverrun="CLIP" wrapText="true">
                <font>
                   <Font size="24.0" />
+               </font>
+            </Button>
+            <Button fx:id="registar_album" layoutX="37.0" layoutY="713.0" mnemonicParsing="false" onAction="#switchCenter" prefHeight="13.0" prefWidth="179.0" styleClass="button-upload" stylesheets="@styles.css" text="Registar Album" textFill="#ff8c00" textOverrun="CLIP" wrapText="true">
+               <font>
+                  <Font size="16.0" />
                </font>
             </Button>
          </children>
