--- a/YourasMusic/src/yourasmusic/FXMLUpload.fxml
+++ b/YourasMusic/src/yourasmusic/FXMLUpload.fxml
@@ -1,12 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="990.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="yourasmusic.FXMLUploadController">
+<AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="990.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="yourasmusic.FXMLUploadController">
    <children>
-      <Button layoutX="430.0" layoutY="373.0" mnemonicParsing="false" onAction="#uploadMusic" text="UPLOAD">
+      <Button layoutX="499.0" layoutY="484.0" mnemonicParsing="false" onAction="#uploadMusic" prefHeight="48.0" prefWidth="332.0" style="-fx-background-color: #000;" styleClass="button-upload" stylesheets="@styles.css" text="Selecionar Audio">
+         <font>
+            <Font size="25.0" />
+         </font>
+      </Button>
+      <Label layoutX="148.0" layoutY="79.0" prefHeight="31.0" prefWidth="695.0" text="Titulo" textFill="WHITE">
+         <font>
+            <Font size="26.0" />
+         </font>
+      </Label>
+      <TextField fx:id="nome" layoutX="148.0" layoutY="110.0" prefHeight="48.0" prefWidth="695.0" />
+      <Label layoutX="152.0" layoutY="192.0" prefHeight="31.0" prefWidth="695.0" text="Genero" textFill="WHITE">
+         <font>
+            <Font size="26.0" />
+         </font>
+      </Label>
+      <ComboBox fx:id="genero" layoutX="148.0" layoutY="223.0" prefHeight="48.0" prefWidth="695.0" />
+      <TextField layoutX="151.0" layoutY="484.0" prefHeight="48.0" prefWidth="332.0" />
+      <Button layoutX="218.0" layoutY="653.0" mnemonicParsing="false" onAction="#enviarUpload" prefHeight="65.0" prefWidth="507.0" style="-fx-background-color: #000;" styleClass="button-upload" stylesheets="@styles.css" text="Carregar">
          <font>
             <Font size="25.0" />
          </font>
