--- a/YourasMusic/src/yourasmusic/FXMLUpload.fxml
+++ b/YourasMusic/src/yourasmusic/FXMLUpload.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="990.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="yourasmusic.FXMLUploadController">
+<AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="990.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="yourasmusic.FXMLUploadController">
    <children>
       <Button layoutX="499.0" layoutY="484.0" mnemonicParsing="false" onAction="#uploadMusic" prefHeight="48.0" prefWidth="332.0" style="-fx-background-color: #000;" styleClass="button-upload" stylesheets="@styles.css" text="Selecionar Audio">
          <font>
@@ -26,7 +26,7 @@
          </font>
       </Label>
       <ComboBox fx:id="genero" layoutX="148.0" layoutY="223.0" prefHeight="48.0" prefWidth="695.0" />
-      <TextField layoutX="151.0" layoutY="484.0" prefHeight="48.0" prefWidth="332.0" />
+      <TextField fx:id="endereco" layoutX="151.0" layoutY="484.0" prefHeight="48.0" prefWidth="332.0" />
       <Button layoutX="218.0" layoutY="653.0" mnemonicParsing="false" onAction="#enviarUpload" prefHeight="65.0" prefWidth="507.0" style="-fx-background-color: #000;" styleClass="button-upload" stylesheets="@styles.css" text="Carregar">
          <font>
             <Font size="25.0" />
