--- a/YourasMusic/src/yourasmusic/FXMLInicioRoot.fxml
+++ b/YourasMusic/src/yourasmusic/FXMLInicioRoot.fxml
@@ -62,12 +62,12 @@
    <top>
       <Pane prefHeight="54.0" prefWidth="1240.0" style="-fx-background-color: #272727;" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="but_upload1" layoutX="446.0" layoutY="12.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="49.0" styleClass="button-upload" stylesheets="@styles.css" text="Play" textFill="#ff8c00" textOverrun="CLIP" wrapText="true">
+            <Button fx:id="but_upload1" layoutX="433.0" layoutY="12.0" mnemonicParsing="false" onAction="#play" prefHeight="30.0" prefWidth="62.0" styleClass="button-upload" stylesheets="@styles.css" text="Play" textFill="#ff8c00" textOverrun="CLIP" wrapText="true">
                <font>
                   <Font size="14.0" />
                </font>
             </Button>
-            <Button fx:id="but_upload11" layoutX="512.0" layoutY="12.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="65.0" styleClass="button-upload" stylesheets="@styles.css" text="Pause" textFill="#ff8c00" textOverrun="CLIP" wrapText="true">
+            <Button fx:id="but_upload11" layoutX="512.0" layoutY="12.0" mnemonicParsing="false" onAction="#pauseResume" prefHeight="30.0" prefWidth="65.0" styleClass="button-upload" stylesheets="@styles.css" text="Pause" textFill="#ff8c00" textOverrun="CLIP" wrapText="true">
                <font>
                   <Font size="14.0" />
                </font>
@@ -77,6 +77,7 @@
                   <Font size="14.0" />
                </font>
             </Button>
+            <Label fx:id="musicPlaying" layoutX="706.0" layoutY="19.0" prefHeight="17.0" prefWidth="150.0" text="Label" textFill="WHITE" />
          </children>
       </Pane>
    </top>
