--- a/YourasMusic/src/yourasmusic/FXMLConsultarReservas.fxml
+++ b/YourasMusic/src/yourasmusic/FXMLConsultarReservas.fxml
@@ -2,9 +2,8 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="990.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="yourasmusic.FXMLConsultarReservasController">
@@ -14,21 +13,11 @@
             <Font size="46.0" />
          </font>
       </Label>
-      <TableView fx:id="tblReservas" layoutX="65.0" layoutY="174.0" prefHeight="449.0" prefWidth="861.0">
-        <columns>
-          <TableColumn fx:id="tbl_colunaNumero" prefWidth="112.0" text="Numero" />
-          <TableColumn fx:id="tbl_colunaEstudio" prefWidth="217.0" text="Estudio" />
-            <TableColumn fx:id="tbl_colunaRequerente" minWidth="0.0" prefWidth="197.0" text="Requerente" />
-            <TableColumn fx:id="tbl_colunaData" prefWidth="334.0" text="Data" />
-        </columns>
-         <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-         </columnResizePolicy>
-      </TableView>
-      <Button layoutX="390.0" layoutY="689.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="211.0" styleClass="button-upload" text="Eliminar">
+      <Button layoutX="390.0" layoutY="689.0" mnemonicParsing="false" onAction="#deleteReserva" prefHeight="48.0" prefWidth="211.0" styleClass="button-upload" text="Eliminar">
          <font>
             <Font size="21.0" />
          </font>
       </Button>
+      <TilePane fx:id="tileReservas" layoutX="43.0" layoutY="146.0" prefHeight="508.0" prefWidth="905.0" />
    </children>
 </AnchorPane>
