--- a/YourasMusic/src/yourasmusic/FXMLEstudioIndividual.fxml
+++ b/YourasMusic/src/yourasmusic/FXMLEstudioIndividual.fxml
@@ -12,14 +12,14 @@
    <children>
       <BorderPane layoutX="20.0" layoutY="20.0" prefHeight="800.0" prefWidth="990.0">
          <left>
-            <Pane prefHeight="829.0" prefWidth="1010.0" BorderPane.alignment="CENTER">
+            <Pane prefHeight="829.0" prefWidth="1010.0" styleClass="pane" stylesheets="@styles.css" BorderPane.alignment="CENTER">
                <children>
-                  <Label fx:id="nomeDir" alignment="CENTER" layoutX="-1.0" layoutY="56.0" prefHeight="147.0" prefWidth="1016.0" text="nomeDiretor" textFill="WHITE">
+                  <Label fx:id="nomeDir" alignment="CENTER" layoutX="1.0" layoutY="100.0" prefHeight="147.0" prefWidth="1016.0" text="nomeDiretor" textFill="WHITE">
                      <font>
                         <Font size="31.0" />
                      </font>
                   </Label>
-                  <Label fx:id="moradaEstudio" layoutX="211.0" layoutY="203.0" prefHeight="61.0" prefWidth="805.0" text="morada" textFill="WHITE">
+                  <Label fx:id="moradaEstudio" layoutX="88.0" layoutY="400.0" prefHeight="61.0" prefWidth="850.0" text="morada" textFill="WHITE">
                      <font>
                         <Font size="25.0" />
                      </font>
@@ -28,7 +28,12 @@
                      <font>
                         <Font size="21.0" />
                      </font></Button>
-                  <DatePicker fx:id="dtDataReserva" layoutX="251.0" layoutY="478.0" prefHeight="41.0" prefWidth="514.0" promptText="Selecione a data a Reservar" />
+                  <DatePicker fx:id="dtDataReserva" layoutX="88.0" layoutY="506.0" prefHeight="41.0" prefWidth="842.0" promptText="Selecione a data a Reservar" />
+                  <Label fx:id="moradaEstudio1" layoutX="88.0" layoutY="339.0" prefHeight="61.0" prefWidth="805.0" text="Morada:" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="40.0" />
+                     </font>
+                  </Label>
                </children>
             </Pane>
          </left>
