--- a/YourasMusic/src/yourasmusic/FXMLArtistaIndividual.fxml
+++ b/YourasMusic/src/yourasmusic/FXMLArtistaIndividual.fxml
@@ -5,27 +5,29 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.TilePane?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="yourasmusic.FXMLArtistaIndividualController">
    <children>
       <BorderPane layoutX="10.0" layoutY="10.0" prefHeight="800.0" prefWidth="990.0">
          <center>
-            <Pane prefHeight="462.0" prefWidth="565.0" BorderPane.alignment="CENTER">
+            <Pane prefHeight="462.0" prefWidth="565.0" styleClass="pane" stylesheets="@styles.css" BorderPane.alignment="CENTER">
                <children>
+                  <Line endX="700.0" layoutX="145.0" layoutY="159.0" stroke="WHITE" />
                   <Label fx:id="nomeAlbum" alignment="CENTER" layoutX="17.0" layoutY="36.0" prefHeight="147.0" prefWidth="957.0" text="nome" textFill="WHITE">
                      <font>
                         <Font size="58.0" />
                      </font>
                   </Label>
-                  <Label fx:id="anoAlbum" alignment="CENTER" layoutX="45.0" layoutY="160.0" prefHeight="47.0" prefWidth="306.0" text="Naturalidade" textFill="WHITE">
+                  <Label fx:id="anoAlbum" layoutX="447.0" layoutY="184.0" prefHeight="47.0" prefWidth="306.0" text="Naturalidade" textFill="WHITE">
                      <font>
                         <Font size="39.0" />
                      </font>
                   </Label>
-                  <Label fx:id="tileMusicasArtista1" alignment="CENTER" layoutX="353.0" layoutY="240.0" prefHeight="47.0" prefWidth="306.0" text="Musicas" textFill="WHITE">
+                  <Label fx:id="tileMusicasArtista1" alignment="CENTER" layoutX="353.0" layoutY="259.0" prefHeight="47.0" prefWidth="306.0" text="Musicas" textFill="WHITE">
                      <font>
-                        <Font size="27.0" />
+                        <Font name="System Bold" size="27.0" />
                      </font>
                   </Label>
                   <TilePane fx:id="tileMusicaArtista" layoutX="14.0" layoutY="292.0" prefHeight="627.0" prefWidth="964.0">
@@ -36,6 +38,11 @@
                            </font>
                         </Label>
                      </children></TilePane>
+                  <Label fx:id="anoAlbum1" alignment="CENTER" layoutX="74.0" layoutY="183.0" prefHeight="49.0" prefWidth="359.0" text="Naturalidade:" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="40.0" />
+                     </font>
+                  </Label>
                </children>
             </Pane>
          </center>
