--- a/YourasMusic/src/yourasmusic/FXMLInicioRoot.fxml
+++ b/YourasMusic/src/yourasmusic/FXMLInicioRoot.fxml
@@ -77,7 +77,7 @@
                   <Font size="14.0" />
                </font>
             </Button>
-            <Label fx:id="musicPlaying" layoutX="706.0" layoutY="19.0" prefHeight="17.0" prefWidth="150.0" text="Label" textFill="WHITE" />
+            <Label fx:id="musicPlaying" layoutX="706.0" layoutY="19.0" prefHeight="17.0" prefWidth="150.0" text="Musica a tocar" textFill="WHITE" />
          </children>
       </Pane>
    </top>
